[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scene/Arbeitsplatte/Arbeitsplatte.gd" type="Script" id=1]
[ext_resource path="res://Texture/fliesen.jpg" type="Texture" id=2]
[ext_resource path="res://Texture/texture_table.jpg" type="Texture" id=3]
[ext_resource path="res://Scene/Arbeitsplatte/Pipettieren.tscn" type="PackedScene" id=4]
[ext_resource path="res://Texture/TubeCursor.png" type="Texture" id=5]
[ext_resource path="res://Scene/Arbeitsplatte/TubeVorratsbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/Arbeitsplatte/TubeRack.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scene/Arbeitsplatte/Mikrotiterplatte.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scene/Arbeitsplatte/Muelleimer.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scene/Arbeitsplatte/StoffeArbeitsplatte.tscn" type="PackedScene" id=10]

[node name="Arbeitsplatte" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Boden" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1361.0
margin_bottom = 769.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="Tisch" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 35.0
margin_right = 1361.0
margin_bottom = 728.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Mouse" ]

[node name="Pipettieren" parent="." index="2" instance=ExtResource( 4 )]

[node name="Tube" type="Node2D" parent="." index="3"]

editor/display_folded = true
visible = false
position = Vector2( -49.8315, 86.9276 )
scale = Vector2( 0.3, 0.3 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="TubeTex" type="TextureRect" parent="Tube" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -104.0
margin_right = 88.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="TubeVorratsbox" parent="." index="4" instance=ExtResource( 6 )]

[node name="TubeRack" parent="." index="5" instance=ExtResource( 7 )]

[node name="Mikrotiterplatte" parent="." index="6" instance=ExtResource( 8 )]

[node name="Muelleimer" parent="." index="7" instance=ExtResource( 9 )]

[node name="StoffeArbeitsplatte" parent="." index="8" instance=ExtResource( 10 )]


